# antiviruse-V1-open-source-

./: .gitignore  CMakeLists.txt  INDEX.md  INSTALLATION.md  README.md  RESUME_EXECUTIF.md  install.bat  install.sh  requirements.txt  setup.ps1  setup.py
config/: config.json  signatures.json
core/firewall/: CMakeLists.txt
core/scanner/: CMakeLists.txt  scanner.c
docs/: ARCHITECTURE.md  PEDAGOGIE.md  PROJECT_STRUCTURE.md  QUICKSTART.md
python/: __init__.py
python/orchestrator/: main.py
python/threat_db/: signature_manager.py
tests/: CMakeLists.txt
